fix post text overflow

--- a/src/Reusable/styles/Post.module.css
+++ b/src/Reusable/styles/Post.module.css
@@ -30,6 +30,7 @@
 
 .content {
 	font-size: 2em;
+	word-wrap: break-word;
 }
 
 .content p {
